src/assets/scss/layout/_position.scss
@mixin top($n) {
  top: $n * 1rem;
}

$-indexes: 1;
$-positions: relative, absolute, sticky, fixed;

.position {
  @each $position in $-positions {
    &-#{$position} {
      position: $position;
    }
  }
}

.top {
  &-0 {
    @include top(0);
  }
}

.z-index {
  @each $index in $-indexes {
    &-#{$index} {
      z-index: $index;
    }
  }
}

.fixed-auto-center {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

